--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller  # Install PyInstaller
-          pip install -r requirements.txt  # Install your app's dependencies
+          pip install -r app/requirements.txt  # Install your app's dependencies
 
       - name: Build executable
         run: |
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: executable-${{ matrix.os }}
-          path: bin  # Adjust based on your script name
+          path: bin/ticket_app  # Adjust based on your script name
