--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,25 @@ jobs:
         shell: pwsh
         run: |
           pyinstaller --onefile app/ticket_app.py
+
+      - name: Move Executable to bin (Linux)
+        if: runner.os == 'Linux'
+        run: mv dist/ticket_app bin/
+
+      - name: Move Executable to bin (Windows)
+        if: runner.os == 'Windows'
+        run: mv dist/ticket_app.exe bin/
+
+      - name: Upload Executable
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'Linux'
+        with:
+          name: executable-${{ runner.os }}
+          path: bin/ticket_app  # Adjust based on your script name
+
+      - name: Upload Executable
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'Windows'
+        with:
+          name: executable-${{ runner.os }}
+          path: bin/ticket_app.exe  # Adjust based on your script name
